kubernetes/app_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
spec:
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      containers:
        - name: vproapp_container
          image: ssgaikwad/vprotomcatapp
          ports:
            - name: vproapp_port
              containerPort: 8080
