kubernetes/db_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
spec:
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb-container
        image: ssgaikwad/vprofiledb     
        ports:
          - name: vprodb-port
            containerPort: 3306
      nodeSelector:
        zone: us-west-1b
