kubernetes/mq_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprocache
spec:
  selector:
    matchLabels:
      app: vprocache
  template:
    metadata:
      labels:
        app: vprocache
    spec:
      containers:
      - name: vprocache-container
        image: memcached
        ports:
          - name: vprocache-port
            containerPort: 11211
