kubernetes/rmq_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpromq01
spec:
  selector:
    matchLabels:
      app: vpromq01
  template:
    metadata:
      labels:
        app: vpromq01
    spec:
      containers:
      - name: vpromq01-container
        image: rabbitmq       
        ports:
          - name: vpromq-port
            containerPort: 15672
