kubernetes/app_service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: vproapp
spec:
  selector:
    app: vproapp
  ports:
    - port: 8080
      targetPort: vproapp_port
      protocol: TCP
  type: LoadBalancer
