kubernetes/elastic_service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: vprosearch01
spec:
  selector:
    app: vprosearch01
  ports:
    - port: 9300
      targetPort: vprosearch01
      name: transport
      protocol: TCP
    - port: 9200
      targetPort: http
      protocol: TCP
      name: http
  type: ClusterIP
