kubernetes/rmq_service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: vpromq
spec:
  selector:
    app: vpromq
  ports:
    - port: 15672
      targetPort: vpromq_port
      protocol: TCP
  type: ClusterIP
